<resources>
    <string name="app_name">Beauty List</string>
    <string name="keyword_empty">Empty list!</string>
    <string name="netword_error">Network error!</string>

    <string name="facebook_app_id">363266344581002</string>

     <!--ADS SAMPLE-->
    <!--<string name="ads_application_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--<string name="reward_id">ca-app-pub-3940256099942544/5224354917</string>-->

    <!-- ADS REAL-->
    <string name="ads_application_id">ca-app-pub-1745214908046998~5366612874</string>
    <string name="banner_id">ca-app-pub-1745214908046998/1151147646</string>
    <string name="interstitial_id">ca-app-pub-1745214908046998/1323426087</string>
    <string name="reward_id">ca-app-pub-1745214908046998/2414405657</string>


    <string name="text_privacy_title">
        <u>Touch here to see Information - Privacy Policy</u>
    </string>
    <string name="text_google_play_services">
        <u>Google Play Services</u>
    </string>
    <string name="text_google_admob">
        <u>Google AdMob</u>
    </string>
    <string name="text_facebook">
        <u>Facebook</u>
    </string>

    <string name="privacy_content1">
        Models and Beautiful Look built the Hot List app as an Ad Supported app. This SERVICE is provided by Models and
        Beautiful Look at no cost and is intended for use as is.
        \n\n
        This page is used no inform visitors regarding our policies with the collection, use, and disclosure of Personal
        Information if anyone decided to use our Service.
        \n\n
        If you choose to use our Service, then you agree to the collection and use of information in relation to this
        policy. The Personal Information that we collect is used for providing and improving the Service. We will not
        use or share your information with anyone except as described in this Privacy Policy.
        \n\n
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
        at Hot List unless otherwise defined in this Privacy Policy.
        \n\n
        <b>Information Collection and Use</b>
        \n\n
        For a better experience, while using our Service, we may require you to provide us with certain personally
        identifiable information. The information that we request will be retained by us and used as described in this
        privacy policy.
        \n\n
        The app does use third party services that may collect information used to identify you.
        \n\n
        Link to privacy policy of third party service providers used by the app
        \n\n
    </string>

    <string name="privacy_content2">
        \n\n
        <b>Log Data</b>
        \n\n
        We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and
        information (through third party products) on your phone called Log Data. This
        Log Data may include information such as your device Internet Protocol (\"IP\") address, the name, operating
        system version, the configuration of the app when utilizing our Service, the time
        and date of your use of the Service, and other statistics.
        \n\n
        <b>Cookies</b>
        \n\n
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are
        sent to your browser from the websites that your visit and are stored on your device\'s internal memory.
        \n\n
        This Service does not use these \"cookies\" explicitly. However, the app may use third party code and libraries
        that use \"cookies\" to collect information and improve their services. You have the option to either accept or
        refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies,
        you may not e able to use some portions of this Service.
        \n\n
        <b>Service Providers</b>
        \n\n
        We may employ third-party companies and individuals due to the following reasons:
        ,Facilitating our Service
        ,Providing the Service on our behalf
        ,Performing service-related services
        ,Assist us in analyzing how our Service is used.
        \n\n
        We want to inform users of this Service that these third parties have access to your Personal Information. The
        reason is to perform the task assigned them on our behalf. However, they are obligated not to disclose or use
        the information for any other purpose.

        \n\n
        <b>Security</b>
        \n\n
        We value your trust in providing us your Personal Information, thus we are striving to use commercially
        acceptable means of protecting it. But remember that no method of transmission over the internet, or method of
        electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
        \n\n

        <b>Links to Other Sites</b>
        \n\n
        This service may contain links to other sites. If you click on a third-party link, you will be directed to that
        site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the
        Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy
        policies, or practices of any third-party sites or services.
        \n\n

        <b>Children\'s Privacy</b>
        \n\n
        These Services do not address anyone under the age of 13. We not knowingly collect personally identifiable
        information from children under 13. In the case we discover that a child under 13 has provided us with personal
        information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that
        your child has provided us with personal information, please contact us so that we will be able to do necessary
        actions.
        \n\n
        <b>Changes to This Privacy Policy</b>
        \n\n
        We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for
        any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are
        effective immediately after they are posted on this page.
        \n\n

        <b>Contact Us</b>
        \n\n
        If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.
        \n\n
    </string>
</resources>
