<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.kiemtien.hotlist.activity.MainActivity">

    <LinearLayout
            android:background="#eaeaea"
            android:id="@+id/layoutPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        <TextView
                android:text="@string/text_privacy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:padding="5dp"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_weight="1"
            android:id="@+id/refreshView"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <LinearLayout
                        android:id="@+id/layoutContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                            android:layout_gravity="center_vertical"
                            android:id="@+id/rvCategories"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    <TextView
                            android:visibility="gone"
                            android:gravity="center"
                            android:id="@+id/tvEmpty"
                            android:text="@string/keyword_empty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <ProgressBar
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:id="@+id/pgLoading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:visibility="gone"
                        android:gravity="center"
                        android:id="@+id/tvError"
                        android:text="@string/netword_error"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>